2019-1/221/users/4097/executions/1847_1276.log
== SUBMITION (2019-06-27 09:38:38) 
-- CODE:
from numpy import*
from numpy.linalg import*

funcionarios = array(eval(input(":")))
funcionarios = funcionarios.T
horas = zeros(len(funcionarios), dtype = int)

for i in range(len(funcionarios)):
	horas[i] = sum(funcionarios[i,:])
print(horas)
-- EXECUTION TIME:
0.889968
-- TEST CASE 1:
---- input:
[[4,4,4,4,4,4,4],[3,3,3,3,3,3,3],[6,6,6,6,6,6,6],[1,2,1,2,1,2,7],[9,8,9,3,4,6,8],[5,6,5,6,5,6,8],[2,1,2,3,6,5,2]]
---- correct output:
7
---- user output:
[30 30 30 27 29 32 38]
-- TEST CASE 2:
---- input:
[[9,8,8,5,3,2,4],[9,9,2,4,5,6,7],[7,8,6,4,3,5,6],[9,9,8,8,8,8,8],[6,6,1,2,1,2,1],[5,6,4,3,4,3,2],[5,9,3,4,5,6,8],[8,7,8,5,6,5,2],[4,9,5,6,8,7,2]]
---- correct output:
2
---- user output:
:[62 71 45 41 43 44 40]
-- TEST CASE 3:
---- input:
[[1,1,7,9,9,9,9],[1,2,7,5,5,5,5],[2,3,7,4,4,4,4],[2,4,7,6,6,6,6],[2,6,6,3,4,3,2],[6,5,6,4,5,6,8],[8,7,7,5,6,5,2],[7,8,9,6,8,7,2]]
---- correct output:
3
---- user output:
:[29 36 56 42 47 45 38]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-27 09:41:39) 
-- CODE:
from numpy import*
from numpy.linalg import*

funcionarios = array(eval(input(":")))
funcionarios = funcionarios.T

dias = zeros(7, dtype = int)

for i in range(len(funcionarios)):
	dia[i] = sum(funcionarios[i])
for i in range(len(funcionarios)):
	if(dias[i] == max(dias)):
		print(i + 1)
print(horas)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-27 09:42:11) 
-- CODE:
from numpy import*
from numpy.linalg import*

funcionarios = array(eval(input(":")))
funcionarios = funcionarios.T

dias = zeros(7, dtype = int)

for i in range(len(funcionarios)):
	dia[i] = sum(funcionarios[i])
for i in range(len(funcionarios)):
	if(dias[i] == max(dias)):
		print(i + 1)
print(horas)



[[2, 2, 3, 4, 5, 8, 8], [7, 7, 4, 3, 3, 4, 4], [3, 3, 4, 3, 3, 2, 2], [9, 9, 4, 7, 3, 4, 1]]
-- EXECUTION TIME:
1.17344
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1847/1276/main.py", line 10, in <module>
    dia[i] = sum(funcionarios[i])
NameError: name 'dia' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-27 09:42:35) 
-- CODE:
from numpy import*
from numpy.linalg import*

funcionarios = array(eval(input(":")))
funcionarios = funcionarios.T

dias = zeros(7, dtype = int)

for i in range(len(funcionarios)):
	dia[i] = sum(funcionarios[i])
for i in range(len(funcionarios)):
	if(dias[i] == max(dias)):
		print(i + 1)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-27 09:42:46) 
-- CODE:
from numpy import*
from numpy.linalg import*

funcionarios = array(eval(input(":")))
funcionarios = funcionarios.T

dias = zeros(7, dtype = int)

for i in range(len(funcionarios)):
	dia[i] = sum(funcionarios[i])
for i in range(len(funcionarios)):
	if(dias[i] == max(dias)):
		print(i + 1)
-- EXECUTION TIME:
1.04505
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1847/1276/main.py", line 10, in <module>
    dia[i] = sum(funcionarios[i])
NameError: name 'dia' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-27 09:43:11) 
-- CODE:
from numpy import*
from numpy.linalg import*

funcionarios = array(eval(input(":")))
funcionarios = funcionarios.T

dias = zeros(7, dtype = int)

for i in range(len(funcionarios)):
	dias[i] = sum(funcionarios[i])
for i in range(len(funcionarios)):
	if(dias[i] == max(dias)):
		print(i + 1)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-27 09:43:19) 
-- CODE:
from numpy import*
from numpy.linalg import*

funcionarios = array(eval(input(":")))
funcionarios = funcionarios.T

dias = zeros(7, dtype = int)

for i in range(len(funcionarios)):
	dias[i] = sum(funcionarios[i])
for i in range(len(funcionarios)):
	if(dias[i] == max(dias)):
		print(i + 1)
-- EXECUTION TIME:
1.02748
-- TEST CASE 1:
---- input:
[[4,4,4,4,4,4,4],[3,3,3,3,3,3,3],[6,6,6,6,6,6,6],[1,2,1,2,1,2,7],[9,8,9,3,4,6,8],[5,6,5,6,5,6,8],[2,1,2,3,6,5,2]]
---- correct output:
7
---- user output:
7
-- TEST CASE 2:
---- input:
[[9,8,8,5,3,2,4],[9,9,2,4,5,6,7],[7,8,6,4,3,5,6],[9,9,8,8,8,8,8],[6,6,1,2,1,2,1],[5,6,4,3,4,3,2],[5,9,3,4,5,6,8],[8,7,8,5,6,5,2],[4,9,5,6,8,7,2]]
---- correct output:
2
---- user output:
2
-- TEST CASE 3:
---- input:
[[1,1,7,9,9,9,9],[1,2,7,5,5,5,5],[2,3,7,4,4,4,4],[2,4,7,6,6,6,6],[2,6,6,3,4,3,2],[6,5,6,4,5,6,8],[8,7,7,5,6,5,2],[7,8,9,6,8,7,2]]
---- correct output:
3
---- user output:
3
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
